Putting stuff in figures

--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,7 @@ First we'll start with a simple bassline, then we'll create a bass instrument.
 
 \item In the chain screen we want to create a phrase. Do this by double tapping \bA on the first cells at the top. For the sake of this tutorial I will assume you have created the phrase \nb{01}.
 
-\item Now we need to make the \textit{bassline}. Still in the chain screen, highlight phrase \nb{01} and hold \bSelect + press \bRight, this will take you to the phrase screen for phrase \nb{01}. Enter the following notes:
+\begin{figure}
 \begin{notes}
 0.
 1.
@@ -113,7 +113,12 @@ C.
 D.
 E. C3
 F.
-\end{notes}
+\end{notes}	
+\caption{Initial bass line.}\label{bassline}
+\end{figure}
+
+\item Now we need to make the \textit{bassline}. Still in the chain screen, highlight phrase \nb{01} and hold \bSelect + press \bRight, this will take you to the phrase screen for phrase \nb{01}. Enter the notes as shown in Figure \ref{bassline}.
+
 
 \item If you press play (\bStart) you will hear the Game Boy burst into life. It's not much (and certainly not a bassline) but it's a start.
 
@@ -203,39 +208,30 @@ Navigate to the chain screen and create a new phrase.
 
 Inside this phrase enter a note then immediately create a new instrument for it. As the instrument you used before was 00 (by default) and you don't want the lead melody instrument to sound like the bassline instrument – let's make this one instrument 01.
 
-We still need to enter notes for the lead melody so let's do something simple:
 
-0 – C6
+\begin{figure}
+\begin{notes}
+0. C6
+1.
+2. E6
+3.
+4. C6
+5.
+6. F6
+7.
+8. C6
+9.
+A. D6
+B.
+C. C6
+D.
+E. A6
+F.
+\end{notes}
+\caption{Initial lead melody.}\label{melody}%TODO
+\end{figure}
 
-1 -
-
-2 – E6
-
-3 -
-
-4 - C6
-
-5 -
-
-6 – F6
-
-7 -
-
-8 – C6
-
-9 -
-
-A – D6
-
-B -
-
-C – C6
-
-D -
-
-E - A6
-
-F -
+We still need to enter notes for the lead melody so let's do something simple, as shown in Figure \ref{melody}.
 
 
 Something like that.
